<resources>
    <string name="app_name">CV</string>
    <string name="enter_the_following">Enter the following:</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="enter">Enter</string>
    <string name="job">Job</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_cv">Your CV</string>
</resources>