<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AACFCF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/enter_the_following"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="93dp"
        android:background="#FDE2E2"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/age"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="183dp"
        android:background="#FDE2E2"
        android:ems="10"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/email"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="145dp"
        android:background="#FDE2E2"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/job"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="282dp"
        android:background="#FDE2E2"
        android:ems="10"
        android:hint="@string/job"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="233dp"
        android:background="#FDE2E2"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="#000000" />

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round"
        android:orientation="horizontal"
        app:sc_border_width="1dp"
        app:sc_tint_color="#086972"
        app:sc_corner_radius="40dp">


        <RadioButton
            android:id="@+id/resetS"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:checked="true"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/enterS"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter"
            android:textSize="18sp" />
    </info.hoang8f.android.segmented.SegmentedGroup>

</RelativeLayout>